<resources>
    <string name="app_name">Daniel</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log">Enter a Name</string>
    <string name="logpas">Password</string>
    <string name="pasbox">Enter Password</string>

    <string name="errLogin">Invalid Login</string>
    <string name="errPass">Invalid Pass</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="phone">Phone</string>

    <string name="DOB">Date of Birth</string>
    <string-array name="months_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="dya">Day</string>
    <string name="year">Year</string>
    <string name="deg">Associate Degree</string>
    <string name="cert">Certificate</string>
    <string name="major">Major</string>
    <string-array name="listCertificate">
        <item>Android Certificate</item>
        <item>IOS Mobile Certificate</item>
    </string-array>
    <string-array name="ListMajor">
        <item>Digital Media</item>
        <item>Mobile Applications Developement</item>\
        <item>Web Development</item>
    </string-array>
    <string name="btnNext">Next</string>

    <string name="sectionClass">Select your class and time slot:</string>
    <string name="class1">MAD-107: ios I</string>
    <string name="class2">MAD-155: Android II </string>
    <string name="class3">MAD-157: ios II</string>
    <string name="class4">MAD-257: Capstone Mobile Class</string>

    <string name="timeRb1">T/Th 12:00 PM - 1:50 PM</string>
    <string name="timeRb2">M/W 10:00 AM - 11:50 AM</string>
    <string name="timeRb3">T/Th 12:00 PM - 1:50 PM</string>
    <string name="timeRb4">T/Th 4:00 PM - 5:50 PM</string>
    <string name="timeRb5">F 9:00 AM - 12:50 PM</string>
    <string name="timeRb6">M/W 12:00 PM - 1:50 PM</string>
    <string name="timeRb7">M/W 12:00 PM - 1:50 PM</string>

    <string name="sumName">Student:</string>
    <string name="sumPhone">Phone:</string>
    <string name="sumBirth">Birthdate:</string>
    <string name="sumDegree">Degree Plan:</string>
    <string name="sumMajor">Major:</string>
    <string name="sumNext">Next Semester:</string>


</resources>